feat: showing MQTT connection status to the user (closes #48)
